<resources>
    <string name="app_name">WeBuildSG</string>
    <string name="action_settings">Settings</string>
    <string name="events">Events</string>
    <string name="repos">Repos</string>
    <string name="empty_fill"></string>
    <string name="updated_on">Updated on %s</string>
    <string name="event_detail">Event Details</string>
    <string name="add_to_calendar">Add to Calendar</string>
    <string name="rsvp_event">RSVP Event</string>
    <string name="view_code">View Code</string>
    <string name="language">Language</string>
    <string name="star_count">Stargazers Count</string>
    <string name="forks_count">Forks Count</string>
    <string name="open_issues_count">Open Issues Count</string>
    <string name="description">Description</string>
    <string name="repo_list_title">%1$s (%2$s)</string>
    <string name="empty_record">Empty</string>
    <string name="app_version">WeBuildSG v%1$s</string>


    <string name="lost_connection">No internet connection.</string>
    <string name="err_enter_correct_nric">Please enter correct NRIC</string>
    <string name="err_location">Location request not enabled</string>
    <string name="err_empty">Cannot leave empty.</string>
    <string name="err_error_network">Network Error.</string>
    <string name="err_error_data">Data Error.</string>
</resources>
