<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.v7.widget.Toolbar
            android:elevation="4dp"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">
            <LinearLayout
                android:id="@+id/nav_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingTop="@dimen/space_small"
                android:paddingBottom="@dimen/space_small"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/space_small"
                        android:text="@string/event_detail"
                        android:textColor="@color/white"
                        android:textAppearance="@style/Material_Headline_Bold"/>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:clipChildren="false"
            android:clipToPadding="false"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v4.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <LinearLayout
                    android:padding="@dimen/space_small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/empty_fill"
                        android:textColor="@color/colorAccentLight"
                        android:textAppearance="@style/Material_Headline_Bold"/>

                    <TextView
                        android:layout_marginTop="@dimen/space_extra_small"
                        android:id="@+id/tv_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/empty_fill"
                        android:textColor="@color/grey_800"
                        android:textAppearance="@style/Material_Body_Regular"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_marginTop="@dimen/space_small"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/language"
                            android:textColor="@color/grey_800"
                            android:textAppearance="@style/Material_Body_Bold"/>
                        <TextView
                            android:id="@+id/tv_language"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/empty_fill"
                            android:textColor="@color/grey_800"
                            android:textAppearance="@style/Material_Subhead_Regular"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_marginTop="@dimen/space_small"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/star_count"
                            android:textColor="@color/grey_800"
                            android:textAppearance="@style/Material_Body_Bold"/>
                        <TextView
                            android:id="@+id/tv_star_count"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/empty_fill"
                            android:textColor="@color/grey_800"
                            android:textAppearance="@style/Material_Subhead_Regular"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_marginTop="@dimen/space_small"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/forks_count"
                            android:textColor="@color/grey_800"
                            android:textAppearance="@style/Material_Body_Bold"/>
                        <TextView
                            android:id="@+id/tv_forks_count"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/empty_fill"
                            android:textColor="@color/grey_800"
                            android:textAppearance="@style/Material_Subhead_Regular"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_marginTop="@dimen/space_small"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/open_issues_count"
                            android:textColor="@color/grey_800"
                            android:textAppearance="@style/Material_Body_Bold"/>
                        <TextView
                            android:id="@+id/tv_open_issue_count"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/empty_fill"
                            android:textColor="@color/grey_800"
                            android:textAppearance="@style/Material_Subhead_Regular"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_marginTop="@dimen/space_small"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/description"
                            android:textColor="@color/grey_800"
                            android:textAppearance="@style/Material_Body_Bold"/>
                        <TextView
                            android:id="@+id/tv_description"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/empty_fill"
                            android:textColor="@color/grey_800"
                            android:textAppearance="@style/Material_Subhead_Regular"/>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v4.widget.NestedScrollView>

            <LinearLayout
                android:elevation="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.balysv.materialripple.MaterialRippleLayout
                    android:id="@+id/btn_view_code"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    app:mrl_rippleOverlay="true"
                    android:layout_height="wrap_content">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:background="@color/colorAccentLight"
                        android:paddingTop="@dimen/space_medium"
                        android:paddingBottom="@dimen/space_medium"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_centerInParent="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/view_code"
                            android:textColor="@color/grey_100"
                            android:textAppearance="@style/Material_Subhead_Bold"/>
                    </RelativeLayout>
                </com.balysv.materialripple.MaterialRippleLayout>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
